[project]
name = "photo-geocoder"
version = "0.1.0"
description = "Scripts for geocoding images and searching Instagram hashtags"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "requests>=2.26",
    "pillow>=10.0",
    "geopy>=2.4.1",
    "torch>=2.0",
    "torchvision>=0.15",
    "scikit-image>=0.22",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
